[metadata]
name = orvp
version = 0.0.1
author = Punya Swaroop Sirigiri
author_email = punyaswaroop12@gmail.com
description = For Optiver Realized Volatility Prediction
url = https://github.com/punyaswaroop12/Optiver-Volatility-Prediction/tree/main/src
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True